gcc/testsuite/g++.dg/modules/p0713-2.C
// { dg-additional-options "-fmodules-ts" }
int j;
module; // { dg-error "not permitted" }
